Fixed uneven list item width on map page

--- a/bruinrent/src/components/screens/MapPage.css
+++ b/bruinrent/src/components/screens/MapPage.css
@@ -87,6 +87,7 @@
 
 .address-list-item {
   transition: filter 250ms;
+  width: 100%;
 }
 
 .address-list-item:hover {
